--- a/BanVeDiTourDuLich/BanVeDiTourDuLich.csproj
+++ b/BanVeDiTourDuLich/BanVeDiTourDuLich.csproj
@@ -56,6 +56,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -127,11 +129,29 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Models\ChiTietPhuongTien.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Models\DataContext.cs" />
+    <Compile Include="Models\DiaDiem.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\HoaDon.cs" />
+    <Compile Include="Models\KhachHang.cs" />
+    <Compile Include="Models\LoaiKhachHang.cs" />
+    <Compile Include="Models\LoaiNhanVien.cs" />
+    <Compile Include="Models\LoaiPhuongTien.cs" />
+    <Compile Include="Models\LoaiQuyen.cs" />
+    <Compile Include="Models\LoaiVe.cs" />
+    <Compile Include="Models\MaGiamGia.cs" />
+    <Compile Include="Models\NhanVien.cs" />
+    <Compile Include="Models\PhuongTien.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Models\Quyen.cs" />
+    <Compile Include="sysdiagram.cs" />
+    <Compile Include="Models\ThongTinLoaiQuyenLoaiNhanVien.cs" />
+    <Compile Include="Models\Tour.cs" />
+    <Compile Include="Models\Ve.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -267,7 +287,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\fonts\glyphicons-halflings-regular.woff2" />
