--- a/BanVeDiTourDuLich/BanVeDiTourDuLich.csproj
+++ b/BanVeDiTourDuLich/BanVeDiTourDuLich.csproj
@@ -162,16 +162,11 @@
     <Compile Include="Migrations\202010120411580_FixNhanXetTableName.designer.cs">
       <DependentUpon>202010120411580_FixNhanXetTableName.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202010130808543_AddIDToAccount.cs" />
-    <Compile Include="Migrations\202010130808543_AddIDToAccount.designer.cs">
-      <DependentUpon>202010130808543_AddIDToAccount.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202010130839056_AddKhoaNgoai.cs" />
-    <Compile Include="Migrations\202010130839056_AddKhoaNgoai.designer.cs">
-      <DependentUpon>202010130839056_AddKhoaNgoai.cs</DependentUpon>
+    <Compile Include="Migrations\202010131459537_AddTaiKhoan.cs" />
+    <Compile Include="Migrations\202010131459537_AddTaiKhoan.designer.cs">
+      <DependentUpon>202010131459537_AddTaiKhoan.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\Account.cs" />
     <Compile Include="Models\ChiTietPhuongTien.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Models\DataContext.cs" />
@@ -190,6 +185,7 @@
     <Compile Include="Models\NhanVien.cs" />
     <Compile Include="Models\NhanXet.cs" />
     <Compile Include="Models\PhuongTien.cs" />
+    <Compile Include="Models\TaiKhoan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Quyen.cs" />
     <Compile Include="Models\ThongTinLoaiQuyenLoaiNhanVien.cs" />
@@ -2310,11 +2306,8 @@
     <EmbeddedResource Include="Migrations\202010120411580_FixNhanXetTableName.resx">
       <DependentUpon>202010120411580_FixNhanXetTableName.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202010130808543_AddIDToAccount.resx">
-      <DependentUpon>202010130808543_AddIDToAccount.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202010130839056_AddKhoaNgoai.resx">
-      <DependentUpon>202010130839056_AddKhoaNgoai.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202010131459537_AddTaiKhoan.resx">
+      <DependentUpon>202010131459537_AddTaiKhoan.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
