--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,7 @@ _[Ss]cripts
 *.nupkg
 *.ncrunchsolution
 *.dot[Cc]over
+.vs/BanVeDiTourDuLich/v16/Browse.VC.db
+.vs/BanVeDiTourDuLich/v16/Browse.VC.db-shm
+.vs/BanVeDiTourDuLich/v16/Browse.VC.db-wal
+.vs/BanVeDiTourDuLich/v16/Browse.VC.opendb
