--- a/BanVeDiTourDuLich/BanVeDiTourDuLich.csproj
+++ b/BanVeDiTourDuLich/BanVeDiTourDuLich.csproj
@@ -171,6 +171,10 @@
     <Compile Include="Migrations\202010140835500_AddTaiKhoan.designer.cs">
       <DependentUpon>202010140835500_AddTaiKhoan.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202010181645246_fixTaiKhoan.cs" />
+    <Compile Include="Migrations\202010181645246_fixTaiKhoan.designer.cs">
+      <DependentUpon>202010181645246_fixTaiKhoan.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ChiTietPhuongTien.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -204,6 +208,7 @@
     <Compile Include="ViewModels\QuanLyNguoiDungViewModel.cs" />
     <Compile Include="ViewModels\QuanLyVeViewModel.cs" />
     <Compile Include="ViewModels\SearchViewModel.cs" />
+    <Compile Include="ViewModels\ThongTinHoaDon.cs" />
     <Compile Include="ViewModels\ThongTinVeExpanded.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -2348,6 +2353,8 @@
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Admin\QuanLyBanVe.cshtml" />
     <Content Include="Views\Admin\QuanLyNguoiDung.cshtml" />
+    <Content Include="Views\Admin\ChiTietVe.cshtml" />
+    <Content Include="Views\Home\ChiTietChuyenDi.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -2395,6 +2402,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202010140835500_AddTaiKhoan.resx">
       <DependentUpon>202010140835500_AddTaiKhoan.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202010181645246_fixTaiKhoan.resx">
+      <DependentUpon>202010181645246_fixTaiKhoan.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
