--- a/BanVeDiTourDuLich/Web.config
+++ b/BanVeDiTourDuLich/Web.config
@@ -62,6 +62,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DataContext" connectionString="Data Source=DESKTOP-UCKB5E7;Initial Catalog=BanVeDiTourDuLich;Integrated Security=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DataContext" connectionString="Data Source=LAPTOP-3EAD9E6J\SQLEXPRESS;Initial Catalog=BanVeDiTourDuLich;Integrated Security=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
