--- a/BanVeDiTourDuLich/BanVeDiTourDuLich.csproj
+++ b/BanVeDiTourDuLich/BanVeDiTourDuLich.csproj
@@ -213,6 +213,9 @@
     <Compile Include="Models\ThongTinLoaiQuyenLoaiNhanVien.cs" />
     <Compile Include="Models\Tour.cs" />
     <Compile Include="Models\Ve.cs" />
+    <Compile Include="ViewModels\ChiTiet.cs" />
+    <Compile Include="ViewModels\ChiTietTour.cs" />
+    <Compile Include="ViewModels\ChiTietViewModel.cs" />
     <Compile Include="ViewModels\DiaDiemGiaTien.cs" />
     <Compile Include="ViewModels\ExpandedDiaDiemViewModel.cs" />
     <Compile Include="ViewModels\IndexViewModel.cs" />
@@ -2376,6 +2379,7 @@
     <Content Include="Views\Tour\Index.cshtml">
       <BrowseToURL>~/Tour/Index.</BrowseToURL>
     </Content>
+    <Content Include="Views\Tour\TimKiemTour.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
