--- a/BanVeDiTourDuLich/BanVeDiTourDuLich.csproj
+++ b/BanVeDiTourDuLich/BanVeDiTourDuLich.csproj
@@ -227,6 +227,10 @@
     <Compile Include="Migrations\202011151545194_pending.designer.cs">
       <DependentUpon>202011151545194_pending.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202011160140305_AddConnectionId.cs" />
+    <Compile Include="Migrations\202011160140305_AddConnectionId.designer.cs">
+      <DependentUpon>202011160140305_AddConnectionId.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ChiTietPhuongTien.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -255,6 +259,7 @@
     <Compile Include="Models\ThongTinLoaiQuyenLoaiNhanVien.cs" />
     <Compile Include="Models\Tour.cs" />
     <Compile Include="Models\Ve.cs" />
+    <Compile Include="Utilizer\ConnectionIdUser.cs" />
     <Compile Include="ViewModels\ChiTietTour.cs" />
     <Compile Include="ViewModels\ChiTietViewModel.cs" />
     <Compile Include="ViewModels\ThongTinVeTrongGio.cs" />
@@ -2495,6 +2500,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202011151545194_pending.resx">
       <DependentUpon>202011151545194_pending.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202011160140305_AddConnectionId.resx">
+      <DependentUpon>202011160140305_AddConnectionId.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
